--- a/.cloudbees/workflows/AutoTest.yaml
+++ b/.cloudbees/workflows/AutoTest.yaml
@@ -1,18 +1,17 @@
 apiVersion: automation.cloudbees.io/v1alpha1
 kind: workflow
 name: My workflow
+
 on:
   push:
     branches:
-      - "**"
+      - '**'
+
 jobs:
   build:
     steps:
-      - uses: docker://golang:1.20.3-alpine3.17
-        name: Say hello
+      - name: Say hello
+        uses: docker://golang:1.20.3-alpine3.17
         shell: sh
         run: |
           echo "hello world"
-      - uses: cloudbees-io/gosec-sast-scan-code@v1
-        name: Run gosec (SO)
-        kind: scan
