Added source code checkout

--- a/.cloudbees/workflows/AutoTest.yaml
+++ b/.cloudbees/workflows/AutoTest.yaml
@@ -13,6 +13,8 @@ jobs:
         shell: sh
         run: |
           echo "hello world"
-      - uses: cloudbees-io/gosec-sast-scan-code@v1
-        name: Run gosec (SO)
+      - name: checkout-source-code
+        uses: cloudbees-io/checkout@v1    
+      - name: Run gosec (SO)
+        uses: cloudbees-io/gosec-sast-scan-code@v1
         kind: scan
