--- a/.cloudbees/workflows/AutoTest.yaml
+++ b/.cloudbees/workflows/AutoTest.yaml
@@ -14,8 +14,12 @@ jobs:
         shell: sh
         run: |
           echo "hello world"
-      - name: checkout-source-code
-        uses: cloudbees-io/checkout@v1
-      - name: Run gosec (SO)
-        uses: cloudbees-io/gosec-sast-scan-code@v1
+      - uses: cloudbees-io/checkout@v1
+        name: checkout-source-code
+      - uses: cloudbees-io/gosec-sast-scan-code@v1
+        name: Run gosec (SO)
         kind: scan
+      - uses: cloudbees-io/sonarqube-bundled-sast-scan-code@v2
+        name: Run Sonarqube
+        with:
+          language: LANGUAGE_GO
