--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -18,4 +18,6 @@ jobs:
         name: checkout-source-code
       - uses: cloudbees-io/sonarqube-bundled-sast-scan-code@v2
         name: Run Sonarqube
+        with:
+          language: LANGUAGE_GO
           
