--- a/.cloudbees/workflows/my-workflow.yaml
+++ b/.cloudbees/workflows/my-workflow.yaml
@@ -9,17 +9,13 @@ on:
 jobs:
   build:
     steps:
-      - uses: docker://golang:1.20.3-alpine3.17
-        name: Say hello
+      - name: Say hello
+        uses: docker://golang:1.20.3-alpine3.17
         shell: sh
         run: |
           echo "hello world"
       - uses: cloudbees-io/checkout@v1
         name: checkout-source-code
-      - uses: cloudbees-io/sonarqube-bundled-sast-scan-code@v2
-        name: Run Sonarqube
-        with:
-          language: LANGUAGE_GO
       - uses: cloudbees-io/gosec-sast-scan-code@v1
         name: Run gosec (SO)
-          
+        kind: scan
